# kakaowork-py

./: .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yaml  CHANGELOG.rst  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: changelog.rst  conf.py  index.rst  modules.rst
docs/api/: kakaowork.blockkit.rst  kakaowork.client.rst  kakaowork.command.rst  kakaowork.consts.rst  kakaowork.exceptions.rst  kakaowork.models.rst  kakaowork.rst  kakaowork.utils.rst
docs/dev/: contributing.rst  reactive_handler.rst
docs/user/: installation.rst  quickstart.rst
examples/: list_conversations.py  reactive_handler.py  send_messages.py
examples/async/: list_conversations.py  send_messages.py
kakaowork/: __init__.py  __main__.py  blockkit.py  client.py  command.py  consts.py  exceptions.py  models.py  ratelimit.py  reactive.py  utils.py
news/: 1.feature.rst  12.enhancement.rst  127.misc  130.feature  131.enhancement  136.breaking  138.breaking  141.misc  145.feature  146.feature  151.bugfix  156.bugfix  157.breaking  163.bugfix  164.bugfix  166.breaking  168.bugfix  19.enhancement.rst  2.feature.rst  24.doc  27.bugfix  28.bugfix  29.enhancement  31.breaking  31.enhancement  31.feature  32.documentation  33.documentation  34.enhancement  37.feature  39.enhancement  42.feature  47.enhancement  57.enhancement  60.misc  7.feature.rst  82.bugfix  89.feature  9.enhancement.rst  94.enhancement
tests/: __init__.py  blockkit_test.py  client_test.py  command_test.py  conftest.py  models_test.py  ratelimit_test.py  utils_test.py
