[tool.poetry]
name = "kakaowork"
version = "0.7.1"
description = "Kakaowork Python client"
authors = ["Sung-Kyu Yoo <skyoo2003@gmail.com>"]
license = "MIT"
packages = [
    { include = "kakaowork" }
]
readme = "README.md"
homepage = "https://github.com/skyoo2003/kakaowork-py"
repository = "https://github.com/skyoo2003/kakaowork-py"
keywords = ["kakaowork"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.6.1"
urllib3 = ">=1.14,<2"
pytz = ">=2015.7"
aiosonic = ">=0.10,<1"
pydantic = ">=1.6.2,<2"
click = { version = ">=7,<9", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
towncrier = "^21.3.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.16.0"
yapf = "^0.31.0"
flake8 = "^4.0.1"
mypy = "^0.910"
coverage = { version = "^6.1", extras = ["toml"] }
tox = "^3.24.4"
sphinx = "^4.3.0"
types-pytz = "^2021.3.1"
pydocstyle = { version = "^6.1.1", extras = ["toml"] }

[tool.poetry.extras]
cli = ['click']

[tool.poetry.scripts]
kakaowork = "kakaowork.__main__:main"

[tool.pytest.ini_options]
minversion = "5.3"
testpaths = ["tests", "kakaowork"]
addopts = "--cov=kakaowork --cov-report=html --cov-report=xml --doctest-modules --doctest-glob=*.rst"
faulthandler_timeout = 10

[tool.coverage.run]
source = ["kakaowork"]

[tool.coverage.report]
ignore_errors = true
omit = ["*/tests/*"]

[tool.coverage.html]
directory = ".report/html"

[tool.coverage.xml]
output = ".report/coverage.xml"

[tool.pydocstyle]
inherit = false
ignore = "D100,D203,D204,D213,D215,D400,D401,D404,D406,D407,D408,D409,D413" # D100 + google convention. See http://www.pydocstyle.org/en/stable/error_codes.html#default-conventions
match = "\\.*(?!_test)\\\\.py|(!?client|models|blockkit)\\.*\\\\.py"
match_dir = "kakaowork"

[tool.towncrier]
package = "kakaowork"
filename = "CHANGELOG.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/skyoo2003/kakaowork-py/issues/{issue}>`_"
title_format = "{name} {version} ({project_date})"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "New Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "enhancement"
    name = "Enhancement"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecation"
    name = "Deprecation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "removal"
    name = "Removal"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous"
    showcontent = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
